--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
 body {
     width: 70%;
     margin: 0 auto;
-    height: 1000px;
     background-color: hsl(36, 100%, 99%);
 }
 /* header stayling*/
@@ -15,7 +14,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 50px;
+    margin-top: 30px;
     width: auto;
 }
 .logo-container {
@@ -209,6 +208,7 @@ button:hover {
     width: 100%;
     height: 130px;
     margin-top: 40px;
+    margin-bottom: 50px;
 }
 .retro-container, .laptop-container, .growth-container {
     display: grid;
@@ -259,15 +259,150 @@ button:hover {
     height: 130px;
     object-fit: cover;
 }
-.laptop-container {
+
+.sidebar {
+    background-color: white;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    width: 230px;
+    z-index: 100;
+    display: flex;
+    align-items: center;
+    opacity: 0;
+    pointer-events: none;
+    transition: 0.2s ease;
+}
+.sidebar-links {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    margin-left: 25px;
+    margin-bottom: 200px;
+}
+
+.sidebar-links li {
+    list-style: none;
+    margin-bottom: 20px;
+    font-family: Inter, sans-serif;
+    color: hsl(240, 100%, 5%);
+    font-size: 15px;
+}
+.sidebar-close-button {
+    position: absolute;
+    top:30px;
+    right: 20px;
+}
+.close-image {
+    width: 30px;
+}
+.hamburger-menu:hover .sidebar {
+    opacity: 1;
+    cursor: pointer;
+}
+.hamburger-menu:hover {
+    cursor: pointer;
+}
+
+
+
+
+@media (max-width: 800px) {
+    main {
+        width: 100%;
+        height: 100%;
+        margin-top: -15px;
+    }
+    body {
+        width: 90%;
+        height: 100%;
+    }
+    .nav-container {
+        display: none;
+    }
+    header {
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+    }
+    .gaming-container {
+        grid-template-columns: 1fr;
+        width: 100%;
+        min-height: 480px;
+        gap: 0;
+    }
+    .grid-container {
+        grid-template-columns: 1fr;
+        width: 100%;
+        
+        
+    }
+    .left-section {
+        display: grid;
+        grid-template-columns: 1fr;
+        margin-bottom: 10px;
+    }
+    .info-section {
+        grid-template-columns: 1fr;
+        margin-top: 50px;
+    }
+    .info-section-left {
+        margin-top: 20px;
+    }
+    picture {
+        width: 100%;
+        height: 330px;
+       
+    }
+    .image {
+        width: 100%;
+        height: 330px;
+    }
+    .retro-container, .laptop-container, .growth-container {
+        width: 100%;
+        height: 130px;
+        margin: 0;
+        
+    }
+    .right-section {
+        margin-top: 140px;
+        margin-bottom: 20px;
+
+    }
+    .info-section-left h1 {
+        font-size: 2.5em;
+    }
+    .info-section-right p {
+        margin-top: 10px;
+        line-height: 1.5;
+        font-size: 15px;
+        padding-right: 50px;
+    }
+
+    button {
+        margin-top: 25px;
+    }
+    .bottom-offer-section {
+        margin-bottom: 30px;
+    }
+
     
-
-}
-.growth-container {
-   
 }
 
 
 
 
 
+
+
+
+
+
+
+@media (min-width: 800px) {
+    .hamburger-menu {
+        display: none;
+    }
+}
