--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ main {
     height: auto;
     margin-top: 50px;
     display: grid;
-    grid-template-columns: 70% 30%;
+    grid-template-columns: 70% 320px;
   
 }
 .left-section {
@@ -208,7 +208,7 @@ button:hover {
     width: 100%;
     height: 130px;
     margin-top: 40px;
-    margin-bottom: 50px;
+    margin-bottom: 70px;
 }
 .retro-container, .laptop-container, .growth-container {
     display: grid;
